--- a/Day01-15/Day11/文件和异常.md
+++ b/Day01-15/Day11/文件和异常.md
@@ -90,14 +90,13 @@ def main():
 		print(f.read())
 
 	# 通过for-in循环逐行读取
-	with open('致橡树.txt', mode='r') as f:
+	with open('致橡树.txt', mode='r', encoding='utf-8') as f:
 		for line in f:
 			print(line, end='')
 			time.sleep(0.5)
-	print()
 
 	# 读取文件按行读取到列表中
-	with open('致橡树.txt') as f:
+	with open('致橡树.txt', encoding='utf-8') as f:
 		lines = f.readlines()
 	print(lines)
 	
