--- a/Day01-15/Day11/文件和异常.md
+++ b/Day01-15/Day11/文件和异常.md
@@ -14,7 +14,7 @@
 | `'t'`    | 文本模式（默认）                 |
 | `'+'`    | 更新（既可以读又可以写）         |
 
-下面这张图来自于[菜鸟教程](http://www.runoob.com)网站，它展示了如果根据应用程序的需要来设置操作模式。
+下面这张图来自于[菜鸟教程](http://www.runoob.com)网站，它展示了如何根据应用程序的需要来设置操作模式。
 
 ![](./res/file-open-mode.png)
 
@@ -103,7 +103,7 @@ if __name__ == '__main__':
     main()
 ```
 
-要将文本信息写入文件文件也非常简单，在使用`open`函数时指定好文件名并将文件模式设置为`'w'`即可。注意如果需要对文件内容进行追加式写入，应该将模式设置为`'a'`。如果要写入的文件不存在会自动创建文件而不是引发异常。下面的例子演示了如何将1~9999直接的素数分别写入三个文件中（1~99之间的素数保存在a.txt中，100~999之间的素数保存在b.txt中，1000~9999之间的素数保存在c.txt中）。
+要将文本信息写入文件也非常简单，在使用`open`函数时指定好文件名并将文件模式设置为`'w'`即可。注意如果需要对文件内容进行追加式写入，应该将模式设置为`'a'`。如果要写入的文件不存在会自动创建文件而不是引发异常。下面的例子演示了如何将1-9999直接的素数分别写入三个文件中（1-99之间的素数保存在a.txt中，100-999之间的素数保存在b.txt中，1000-9999之间的素数保存在c.txt中）。
 
 ```Python
 from math import sqrt
