修正了文档内练习2不能保证每次生成的验证码由字母和数字共同组成的bug

--- a/Day01-15/Day07/字符串和常用数据结构.md
+++ b/Day01-15/Day07/字符串和常用数据结构.md
@@ -374,22 +374,50 @@ if __name__ == '__main__':
 ```Python
 import random
 
+need_code_len = 4
 
 def generate_code(code_len=4):
     """
     生成指定长度的验证码
-
-    :param code_len: 验证码的长度(默认4个字符)
-
+    :param code_len: 验证码的长度默认四个字符
     :return: 由大小写英文字母和数字构成的随机验证码
     """
+
+    """
+    不是每次验证码都是大小写英文字母和数字构成
+    """
+    # list_a_z = [i for i in string.ascii_uppercase + string.ascii_lowercase]
+    # list_0_9 = [str(i) for i in range(10)]
+    # sample_list = list_a_z + list_0_9
+    # sj_code = ''.join(random.sample(sample_list, code_len)).replace(" ", "")
+    # print(sj_code)
+
+    """
+    每次都是大小写英文字母与数字构成
+    """
+
     all_chars = '0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ'
     last_pos = len(all_chars) - 1
     code = ''
     for _ in range(code_len):
         index = random.randint(0, last_pos)
         code += all_chars[index]
+
     return code
+
+def main():
+    while True:
+        code = generate_code(need_code_len)
+        if code.isalpha() or code.isdigit():
+            continue
+        else:
+            break
+    return code
+
+if __name__ == '__main__':
+    main()
+
+print(main())
 ```
 
 #### 练习3：设计一个函数返回给定文件名的后缀名。
