--- a/Day41-55/03.静态资源和Ajax请求.md
+++ b/Day41-55/03.静态资源和Ajax请求.md
@@ -261,7 +261,7 @@ urlpatterns = [
 设计视图函数`praise_or_criticize`来支持“好评”和“差评”功能，该视图函数通过Django封装的JsonResponse类将字典序列化成JSON字符串作为返回给浏览器的响应内容。
 
 ```Python
-def praise_or_criticize(request):
+def prise_or_criticize(request):
     """好评"""
     try:
         tno = int(request.GET['tno'])
