--- a/Day01-15/Day14-A/网络编程入门.md
+++ b/Day01-15/Day14-A/网络编程入门.md
@@ -121,7 +121,7 @@ def main():
     for mm_dict in data_model['newslist']:
         url = mm_dict['picUrl']
         # 通过多线程的方式实现图片下载
-        DownloadHanlder(url).start()
+        DownloadHanlder(url).run()
 
 
 if __name__ == '__main__':
@@ -248,7 +248,7 @@ def main():
     while True:
         client, addr = server.accept()
         # 启动一个线程来处理客户端的请求
-        FileTransferHandler(client).start()
+        FileTransferHandler(client).run()
 
 
 if __name__ == '__main__':
