fix(day06): 优化 Day06 练习 3 中判断素数的方法

--- a/Day01-15/Day06/函数和模块的使用.md
+++ b/Day01-15/Day06/函数和模块的使用.md
@@ -262,8 +262,10 @@ def is_palindrome(num):
 #### 练习3：实现判断一个数是不是素数的函数。
 
 ```Python
+from math import sqrt
+
 def is_prime(num):
-    for factor in range(2, num):
+    for factor in range(2, int(sqrt(num)) + 1):
         if num % factor == 0:
             return False
     return True if num != 1 else False
