--- a/Day41-55/03.静态资源和Ajax请求.md
+++ b/Day41-55/03.静态资源和Ajax请求.md
@@ -252,8 +252,8 @@ from vote import views
 urlpatterns = [
     path('', views.show_subjects),
     path('teachers/', views.show_teachers),
-    path('praise/', views.prise_or_criticize),
-    path('criticize/', views.prise_or_criticize),
+    path('praise/', views.praise_or_criticize),
+    path('criticize/', views.praise_or_criticize),
     path('admin/', admin.site.urls),
 ]
 ```
@@ -266,7 +266,7 @@ def praise_or_criticize(request):
     try:
         tno = int(request.GET['tno'])
         teacher = Teacher.objects.get(no=tno)
-        if request.path.startswith('/prise'):
+        if request.path.startswith('/praise'):
             teacher.good_count += 1
         else:
             teacher.bad_count += 1
