--- a/Day01-15/Day07/字符串和常用数据结构.md
+++ b/Day01-15/Day07/字符串和常用数据结构.md
@@ -358,8 +358,7 @@ def main():
     content = '北京欢迎你为你开天辟地…………'
     while True:
         # 清理屏幕上的输出
-        os.system('cls')  # os.system('clear')
-        print(content)
+        print("\r{}".format(content), end="", flush=True)
         # 休眠200毫秒
         time.sleep(0.2)
         content = content[1:] + content[0]
