--- a/Day41-55/47.中间件的应用.md
+++ b/Day41-55/47.中间件的应用.md
@@ -24,7 +24,7 @@ def praise_or_criticize(request: HttpRequest):
     return JsonResponse(data)
 ```
 
-前端页面在收到`{'code': 401, 'message': '请先登录'}`后，可以将用户引导到登录页面，修改后的teacher.html页面的JavaScript代码部门如下所示。
+前端页面在收到`{'code': 401, 'message': '请先登录'}`后，可以将用户引导到登录页面，修改后的teacher.html页面的JavaScript代码部分如下所示。
 
 ```HTML
 <script>
