--- a/Day41-55/43.静态资源和Ajax请求.md
+++ b/Day41-55/43.静态资源和Ajax请求.md
@@ -132,7 +132,8 @@ def show_teachers(request):
 
 ```HTML
 <!DOCTYPE html>
-{% static %}
+{% load static %}
+{%  static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
