--- a/Day41-55/43.静态资源和Ajax请求.md
+++ b/Day41-55/43.静态资源和Ajax请求.md
@@ -59,8 +59,7 @@ class Teacher(models.Model):
 ```SQL
 from django.contrib import admin
 
-from poll2.forms import UserForm
-from poll2.models import Subject, Teacher
+from vote.models import Subject, Teacher
 
 
 class SubjectAdmin(admin.ModelAdmin):
@@ -80,6 +79,8 @@ admin.site.register(Teacher, TeacherAdmin)
 接下来，我们就可以修改views.py文件，通过编写视图函数先实现“学科介绍”页面。
 
 ```Python
+from vote.models import Subject, Teacher
+
 def show_subjects(request):
     """查看所有学科"""
     subjects = Subject.objects.all()
@@ -102,7 +103,8 @@ def show_subjects(request):
     {% for subject in subjects %}
     <div>
         <h3>
-            <a href="/teachers/?sno={{ subject.no }}">{{ subject.name }}</a>
+            {#% 这里href的value不能是/teachers/sno=xxxx, 这样会导致page not found的错误%#}
+            <a href="teachers/?sno={{ subject.no }}">{{ subject.name }}</a>
             {% if subject.is_hot %}
             <img src="/static/images/hot.png" width="32" alt="">
             {% endif %}
@@ -117,6 +119,10 @@ def show_subjects(request):
 在上面的模板中，我们为每个学科添加了一个超链接，点击超链接可以查看该学科的讲师信息，为此需要再编写一个视图函数来处理查看指定学科老师信息。
 
 ```Python
+# 此处省略上面的代码
+from django.core.exceptions import ObjectDoesNotExist
+# 此处省略下面的代码
+
 def show_teachers(request):
     """显示指定学科的老师"""
     try:
@@ -124,7 +130,7 @@ def show_teachers(request):
         subject = Subject.objects.get(no=sno)
         teachers = subject.teacher_set.all()
         return render(request, 'teachers.html', {'subject': subject, 'teachers': teachers})
-    except (KeyError, ValueError, Subject.DoesNotExist):
+    except (KeyError, ValueError, ObjectDoesNotExist):
         return redirect('/')
 ```
 
