--- a/Day01-15/03.分支结构.md
+++ b/Day01-15/03.分支结构.md
@@ -145,19 +145,24 @@ Version: 0.1
 Author: 骆昊
 """
 
-score = float(input('请输入成绩: '))
-if score >= 90:
+score = float(input('请输入成绩：'))
+grade = 'F'
+if 90 <= score <= 100:
     grade = 'A'
-elif score >= 80:
+elif 80 <= score < 90:
     grade = 'B'
-elif score >= 70:
+elif 70 <= score < 80:
     grade = 'C'
-elif score >= 60:
+elif 60 <= score < 70:
     grade = 'D'
-else:
+elif 0 <= score < 60:
     grade = 'E'
-print('对应的等级是:', grade)
+else:
+    print('请输入正确的百分制分数！')
+if grade != 'F':
+    print('您的等级制成绩为：', grade)
 ```
+
 #### 练习4：输入三条边长如果能构成三角形就计算周长和面积
 
 ```Python
