改正错别字-非诚相似-非常相似

--- a/Day76-90/code/1-pandas入门.ipynb
+++ b/Day76-90/code/1-pandas入门.ipynb
@@ -322,7 +322,7 @@
    ],
    "source": [
     "# DataFrame是二维的数据\n",
-    "# excel就非诚相似\n",
+    "# excel就非常相似\n",
     "# 所有进行数据分析，数据挖掘的工具最基础的结果：行和列，行表示样本，列表示的是属性\n",
     "df = DataFrame(data = np.random.randint(0,150,size = (10,3)),index = list('abcdefhijk'),columns=['Python','En','Math'])\n",
     "df"
