--- a/Day16-20/16-20.Python语言进阶.md
+++ b/Day16-20/16-20.Python语言进阶.md
@@ -390,11 +390,7 @@
          """用递归计算Fibonacci数"""
          if num in (1, 2):
              return 1
-         try:
-             return temp[num]
-         except KeyError:
-             temp[num] = fib(num - 1) + fib(num - 2)
-             return temp[num]
+         return fib(num - 1) + fib(num - 2)
      ```
 
      动态规划例子2：子列表元素之和的最大值。（使用动态规划可以避免二重循环）
